# wood_harvest

./: LICENCE  README.md  setup.cfg
scripts/: make_nbp.sh  optimize.py  plot_flux.py  plot_nbp.py  preprocess_CABLE-POP_initial_pools.sh  wood_harvest_experiments.sh  wood_respiration_check.sh
wood_harvest/: __main__.py  decay.py  input_output.py  plotting.py  tools.py
