[metadata]
name = wood_harvest
version = 1.0.0
author = Tammas Loughran
author_email = tammas.loughran@csiro.au
description = Python implementation of CABLE wood harvest and product pools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/tammasloughran/wood_harvest
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = wood_harvest
install_requires =
    matplotlib
    netCDF4
    numpy
    scipy

[options.entry_points]
console_scripts =
    wood_harvest = wood_harvest.__main__:main
